# evm-rpc-picker

./: .gitignore  .rpc-picker.tomlx  AGENTS.md  README.md  pyproject.toml
src/evm_rpc_picker/: __init__.py  config.py  context.py  encryption.py  main.py  models.py  tui.py
src/evm_rpc_picker/commands/: refresh_data.py
src/evm_rpc_picker/screens/: __init__.py  add_rpc_modal.py  custom_rpcs_screen.py  favorite_rpcs_screen.py  main_screen.py  password_modal.py  rpc_screen.py
src/evm_rpc_picker/tabs/: chainlist_tab.py  custom_rpcs_tab.py  favorite_rpcs_tab.py
src/evm_rpc_picker/widgets/: __init__.py  chains_table.py  context_bar.py  custom_header.py  env_status.py  rpc_list_item.py  search_input.py
tests/: test_config.py  test_context.py  test_models.py  test_module_usage.py  test_rpc_screen.py  test_tui.py
