[project]
name = "evm-rpc-picker"
version = "0.1.0"
description = "A TUI tool to search for EVM chains and select an RPC URL."
authors = [{ name = "Radek", email = "radek@example.com" }]
dependencies = [
    "textual>=0.86.0",
    "httpx>=0.27.0",
    "platformdirs>=4.2.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
    "tomlkit>=0.14.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/radeksvarz/evm-rpc-picker"
Repository = "https://github.com/radeksvarz/evm-rpc-picker"
Issues = "https://github.com/radeksvarz/evm-rpc-picker/issues"

[project.scripts]
evm-rpc-picker = "evm_rpc_picker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evm_rpc_picker"]

[tool.hatch.build]
exclude = [
  "RULES.md",
  "foundry.toml",
  "uv.lock",
  ".gitignore",
  "reqs",
  "tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
