[project]
name = "evm-rpc-picker"
version = "0.1.0"
description = "A TUI tool to search for EVM chains, manage favorites securely, and select RPC URLs."
authors = [{ name = "Radek Svarz", email = "evm-rpc-picker.pypi@svarz.cz" }]
dependencies = [
    "textual>=0.86.0",
    "httpx>=0.27.0",
    "platformdirs>=4.2.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
    "tomlkit>=0.14.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
keywords = ["web3", "ethereum", "blockchain", "evm", "rpc", "tui", "foundry", "hardhat"]

[project.urls]
Homepage = "https://github.com/radeksvarz/evm-rpc-picker"
Repository = "https://github.com/radeksvarz/evm-rpc-picker"
Issues = "https://github.com/radeksvarz/evm-rpc-picker/issues"

[project.scripts]
evm-rpc-picker = "evm_rpc_picker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evm_rpc_picker"]

[tool.hatch.build]
exclude = [
  "AGENTS.md",
  "foundry.toml",
  "uv.lock",
  ".gitignore",
  "reqs",
  "tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
]
ignore = ["S101"] # Allow assert as it's used in pytest

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"] # Allow dummy passwords in tests
"src/evm_rpc_picker/config.py" = ["S110"] # Allow silent failure for config/keyring
"src/evm_rpc_picker/context.py" = ["S110"]
"src/evm_rpc_picker/models.py" = ["S110"]
